--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: beginman
+disqus_username: XiaoBei
 
 # Duoshuo settings
 #duoshuo_username: huxblog
