--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ kramdown:
 disqus_username: XiaoBei
 
 # Duoshuo settings
-#duoshuo_username: huxblog
+#duoshuo_username: XiaoBei
 # Share component is depend on Comment so we can NOT use share only.
 #duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
